<resources>
    <string name="app_name">BeautifierAndroid</string>
    <string name="description_text">Description</string>
    <string name="productType">Product Type</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="date">Purchased Date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
         news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
      InstanceID token to logcat.</string>
        <string name="subscribe_to_news">Subscribe To News</string>
        <string name="log_token">Log Token</string>

        <string name="msg_subscribed">Subscribed to news topic</string>
       <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
        <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
       <!--
 +        This is the name that users will see when interacting with this channel.
 +        It should describe the category of notifications that will be sent through this channel
 +     -->
       <string name="default_notification_channel_name" translatable="true">News</string>
</resources>
