<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.andreeagritco.beautifierandroid.DetailsActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/descriptionText"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/description_text"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp" />

    <EditText
        android:id="@+id/productTypeText"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/productType"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp" />


    <EditText
        android:id="@+id/quantity2Text"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/quantity"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp" />

    <EditText
        android:id="@+id/priceText"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/price"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp" />

    <EditText
        android:id="@+id/brandText"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/brand"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp" />

    <EditText
        android:id="@+id/dateText"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/date"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
